# tmt

./: .env.example  .env.staging  .env.staging.template  .gitignore  .pre-commit-config.yaml  12_MONTH_SESSION_TARGETED_RESULTS.md  12_month_session_targeted_report_20250922_223254.md  12_month_session_targeted_report_20250923_215459.md  12_month_session_targeted_report_20250923_215628.md  6_month_backtest_report_20250923.md  BACKTEST_VALIDATION_REPORT.md  CLAUDE.md  CODEBASE_AUDIT_REPORT.md  CODE_REVIEW.md  CODE_REVIEW_REPORT.md  CRITICAL_BLOCKERS_RESOLVED.md  CYCLE_4_DEPLOYMENT_CONFIRMATION.md  CYCLE_CONFIGURATIONS_MASTER.md  Cargo.toml  Docker-README.md  Dockerfile.agent  Dockerfile.dashboard  Dockerfile.execution-engine  Dockerfile.orchestrator  FINAL_SYSTEM_EVALUATION_REPORT.md  IMMEDIATE_ACTION_PLAN.md  IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_REPORT_FINAL.md  ORCHESTRATOR_STANDALONE_DEMO.md  PAPER_TRADING_READINESS_ASSESSMENT.md  PR_79_CODE_REVIEW.md  README.md  RISK_MANAGEMENT_IMPROVEMENTS.md  SESSION_TARGETED_BACKTEST_REPORT.md  SESSION_TARGETING_12M_BACKTEST_REPORT.md  SHOWSTOPPERS_RESOLVED.md  SIGNAL_GENERATION_IMPROVEMENTS.md  SLACK_NOTIFICATIONS_SETUP.md  STAGING_DEPLOYMENT_GUIDE.md  STORY_4.4_IMPLEMENTATION_SUMMARY.md  (+86 more)
agents/market-analysis/: Dockerfile.dev  OPTIMIZATION_GUIDE.md  QUICK_START_WEEK1.md  WEEK1_OPTIMIZATION_DEPLOYMENT.md  active_scanner.py  cache_trading_data.py  config.py  intelligent_signal_generator.py  market_regime_detector.py  optimize_signal_performance.py  parameter_refinement_analysis.py  parameter_robustness.py  pyproject.toml  requirements.txt  simple_main.py  start_agent.py
agents/market-analysis/app/: __init__.py  correlation_analyzer.py  economic_event_monitor.py  main.py  market_state_agent.py  market_state_detector.py  parameter_adjustment_engine.py  session_detector.py  volatility_analyzer.py
agents/market-analysis/app/database/: __init__.py  signal_database.py  trade_correlation.py
agents/market-analysis/app/market_data/: __init__.py  data_normalizer.py  gap_recovery.py  oanda_client.py  polygon_client.py  quality_monitor.py
agents/market-analysis/app/market_regime/: regime_detector.py
agents/market-analysis/app/signals/: __init__.py  confidence_threshold_optimizer.py  frequency_manager.py  market_state_detector.py  parameter_calculator.py  parameter_calculator.py.backup  performance_tracker.py  risk_reward_optimizer.py  signal_generator.py  signal_generator.py.backup  signal_metadata.py  signal_quality_analyzer.py
agents/market-analysis/app/storage/: __init__.py  timescale_client.py
agents/market-analysis/app/utils/: __init__.py  market_structure.py  volume_analysis.py
agents/market-analysis/app/volume_analysis/: __init__.py  ad_line.py  divergence_detector.py  spike_detector.py  volume_classifier.py  volume_profile.py  vwap_analyzer.py  wyckoff_integration.py
agents/market-analysis/app/wyckoff/: __init__.py  confidence_scorer.py  confidence_scorer.py.backup  enhanced_pattern_detector.py  performance_tracker.py  phase_detector.py  spring_upthrust.py  timeframe_validator.py  volume_profile.py
agents/market-analysis/tests/: __init__.py  conftest.py  test_confidence.py  test_data_normalizer.py  test_market_state_detector.py  test_oanda_client.py  test_polygon_client.py  test_signal_generation.py  test_story_3_4_integration.py  test_volume_analysis.py  test_wyckoff.py
execution-engine/: API_DOCUMENTATION.md  Cargo.toml  Dockerfile  Dockerfile.dev  IMPLEMENTATION_SUMMARY.md  README.md  acceptance_criteria_validation.py  fix_missing_stops.py  integration_demo.py  pyproject.toml  pytest_runner.py  requirements.txt  simple_main.py  simple_test.py
execution-engine/app/: __init__.py  main.py
execution-engine/app/core/: __init__.py  models.py
execution-engine/app/integrations/: oanda_client.py
execution-engine/app/monitoring/: __init__.py  metrics.py
execution-engine/app/orders/: __init__.py  order_manager.py
execution-engine/app/positions/: __init__.py  position_manager.py
execution-engine/app/risk/: __init__.py  enhanced_risk_manager.py  risk_config_manager.py  risk_manager.py
execution-engine/scripts/: benchmark.py
execution-engine/src/: __init__.py  lib.rs
execution-engine/src/api/: health.rs  mod.rs
execution-engine/src/execution/: coordinator.rs  mock_platform.rs  mod.rs  orchestrator.rs  simple_test.rs
execution-engine/src/execution/exit_management/: break_even.rs  (+9 more)
execution-engine/src/messaging/: mod.rs
execution-engine/src/monitoring/: metrics.rs
execution-engine/src/oanda/: __init__.py  client.py  order_expiry_manager.py  partial_close_manager.py  pending_order_manager.py  position_manager.py  position_monitor.py  stream_manager.py  trailing_stop_manager.py
execution-engine/src/risk/: config.rs  drawdown_tracker.rs  exposure_monitor.rs  margin_monitor.rs  mod.rs  pnl_calculator.rs  risk_response.rs  risk_reward_tracker.rs  standalone_types.rs  types.rs
execution-engine/src/utils/: config.rs  mod.rs  telemetry.rs  vault.rs
execution-engine/tests/: orchestrator_basic_test.rs  test_drawdown_tracker.rs  test_execution_integration.rs  test_exit_management_integration.rs  test_exit_management_simple.rs  test_exposure_monitor.rs  test_margin_monitor.rs  test_orchestrator.rs  test_orchestrator_isolated.rs  test_orchestrator_updated.rs  test_order_expiry_manager.py  test_partial_close_manager.py  test_pending_order_manager.py  test_pnl_calculator.rs  test_position_manager.py  test_position_monitor.py  test_risk_module.rs  test_risk_response.rs  test_risk_reward_tracker.rs  test_trailing_stop_manager.py
execution-engine/validation/: integration_demo.py  simple_validation.py  story_8_7_validation.py
risk-engine/: Cargo.toml
risk-engine/src/: config.rs  drawdown_tracker.rs  exposure_monitor.rs  lib.rs  margin_monitor.rs  pnl_calculator.rs  risk_response.rs  risk_reward_tracker.rs  types.rs
risk-engine/tests/: edge_case_tests.rs  integration_test.rs  stress_tests.rs
shared/risk-types/: Cargo.toml
shared/risk-types/src/: audit.rs  encryption.rs  lib.rs
src/execution-engine/: Cargo.toml
(+1570 files in other folders)
