[package]
name = "execution-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WebSocket
futures-util = "0.3"
url = "2.5"

# Decimal handling for financial calculations
rust_decimal = { version = "1.33", features = ["serde"] }
rust_decimal_macros = "1.33"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Metrics
prometheus = "0.13"
lazy_static = "1.4"

# Configuration
config = "0.13"
dotenv = "0.15"

# Kafka - made optional to avoid CMake dependency in dev environments  
rdkafka = { version = "0.36", features = ["cmake-build"], optional = true }

# FIX Protocol for DXtrade - using native TLS for SSL connections
native-tls = "0.2"
tokio-native-tls = "0.3"

# SSL/TLS support
rustls = "0.21"
rustls-native-certs = "0.6"

# Binary data handling for FIX
bytes = "1.5"
byteorder = "1.4"

# Encryption for sensitive data
aes-gcm = "0.10"
base64 = "0.21"

# Secure memory handling
zeroize = { version = "1.7", features = ["std", "zeroize_derive"] }

[dev-dependencies]
mockito = "1.2"
proptest = "1.4"
criterion = "0.5"
tokio-test = "0.4"
wiremock = "0.5"
pretty_assertions = "1.4"
tempfile = "3.8"

[features]
default = []
kafka = ["rdkafka"]

# [[bench]]
# name = "execution_bench"
# harness = false