[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "execution-engine"
version = "0.1.0"
description = "High-performance execution engine for automated trading"
authors = [
    {name = "TMT Trading System", email = "dev@tmt-trading.com"},
]
dependencies = [
    "fastapi==0.108.0",
    "uvicorn[standard]==0.24.0",
    "httpx==0.25.2",
    "asyncio-throttle==1.0.2",
    "psycopg2-binary==2.9.9",
    "redis==5.0.1",
    "prometheus-client==0.19.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "sqlalchemy==2.0.23",
    "alembic==1.13.1",
    "asyncpg==0.29.0",
    "aioredis==2.0.1",
    "structlog==23.2.0",
    "python-multipart==0.0.6",
    "cachetools==5.3.2",
    "tenacity==8.2.3",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
]

requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "httpx==0.25.2",
    "freezegun==1.2.2",
    "factory-boy==3.3.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --disable-warnings --cov=app --cov-report=html"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "performance: Performance tests",
    "slow: Slow running tests",
]

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[tool.ruff]
target-version = "py311"
line-length = 120
select = ["E", "W", "F", "I", "N", "UP", "ANN", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "NPY", "RUF"]
ignore = ["ANN101", "ANN102", "ANN401", "S101", "PLR0913", "PLR0915", "PLR2004"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "PLR0913", "PLR0915", "ANN201", "ANN001"]