[package]
name = "risk-engine"
version = "0.1.0"
edition = "2021"
description = "Standalone risk monitoring system for financial trading"

[dependencies]
# Shared types
risk-types = { workspace = true }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Decimal handling for financial calculations
rust_decimal = { version = "1.33", features = ["serde"] }
rust_decimal_macros = "1.33"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"

# Error handling
anyhow = "1.0"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Concurrent data structures
dashmap = "5.5"

# Configuration
toml = "0.8"

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4"
rand = "0.8"

[features]
default = []

[[test]]
name = "integration"
path = "tests/integration_test.rs"