[package]
name = "risk-types"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
rust_decimal = { version = "1.32", features = ["serde-float", "serde-str", "serde-arbitrary-precision"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"

# Encryption dependencies
aes-gcm = "0.10"
base64 = "0.21"
zeroize = { version = "1.7", features = ["derive"] }