[package]
name = "execution-engine"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
chrono = { version = "0.4.34", features = ["serde"] }
num_cpus = "1.16.0"
gethostname = "0.4.3"
